<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:key="general"
        app:title="@string/general_header"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true">

        <ListPreference
            app:key="game_size"
            app:title="@string/game_size"
            app:entries="@array/game_size_human"
            app:entryValues="@array/game_size_data"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="3"
            app:icon="@drawable/icon_game_size_white_24dp"/>

        <ListPreference
            app:key="turns"
            app:title="@string/turns"
            app:entries="@array/turns_data"
            app:entryValues="@array/turns_data"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="3"
            app:icon="@drawable/icon_turns_white_24dp"/>

        <SwitchPreferenceCompat
            app:key="are_increasing"
            app:title="@string/are_increasing"
            app:summaryOn="@string/are_increasing_summary_on"
            app:summaryOff="@string/are_increasing_summary_off"
            app:icon="@drawable/icon_increasing_white_24dp"/>

        <ListPreference
            app:key="hearts"
            app:title="@string/hearts"
            app:entries="@array/hearts_data"
            app:entryValues="@array/hearts_data"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="3"
            app:icon="@drawable/icon_heart_white_24dp"/>

<!--        <Preference-->
<!--            app:key="game_time"-->
<!--            app:title="@string/game_time"-->
<!--            app:defaultValue="5:00"/>-->

        <ListPreference
            app:key="game_time"
            app:title="@string/game_time"
            app:entries="@array/game_time_human"
            app:entryValues="@array/game_time_data"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="2:00"
            app:icon="@drawable/icon_time_white_24dp"/>

<!--        <NumberPickerPreference-->
<!--            app:key="game_time_number"-->
<!--            app:title="@string/game_time"-->
<!--            app:summary="numberpicker"/>-->

        <!--Preference
            app:layout="@layout/fragment_pattern_pick"
            app:key="patternPick"
            app:title="@string/pattern_pick"
            app:summary="@string/pattern_pick_summary"
            /-->

        <com.hawla.flib.views.settings.PatternPickPreference
            app:layout="@layout/pattern_picker_preference"
            app:key="pref_theme"
            app:title="@string/pattern_pick"
            app:summary="@string/pattern_pick_summary"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"/>



    </PreferenceCategory>


    <PreferenceCategory
        app:key="about"
        app:title="@string/about_header"
        app:iconSpaceReserved="false">

        <Preference
            app:key="version"
            app:title="@string/version"
            app:summary="@string/app_version"
            app:icon="@drawable/icon_info_white_24dp" />

    </PreferenceCategory>
<!-- generated
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>-->

</PreferenceScreen>
