<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleScreen">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ButtonContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_mid_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_mid_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_mid_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_mid_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <Button
            android:id="@+id/start_timerace"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/timerace_mode"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_mid_top"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintStart_toStartOf="@+id/vertical_mid_right"
            app:layout_constraintTop_toTopOf="@+id/horizontal_top" />

        <Button
            android:id="@+id/start_endless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/endless_mode"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_mid_top"
            app:layout_constraintEnd_toStartOf="@+id/vertical_mid_left"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toTopOf="@+id/horizontal_top" />

        <Button
            android:id="@+id/show_highscore"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/highscore"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom"
            app:layout_constraintEnd_toStartOf="@+id/vertical_mid_left"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toTopOf="@+id/horizontal_mid_bottom" />

        <Button
            android:id="@+id/show_options"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/options"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintStart_toStartOf="@+id/vertical_mid_right"
            app:layout_constraintTop_toTopOf="@+id/horizontal_mid_bottom" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>